Texas County Filter

--- a/Mark_Branch/Texas County Map/Code/static/css/style.css
+++ b/Mark_Branch/Texas County Map/Code/static/css/style.css
@@ -3,18 +3,12 @@ body {
     margin: 0;
 }
 
-#map,
-body,
-html {
-    height: 100%;
-}
-
-.leaflet-popup-content {
-    text-align: center;
+#map {
+    height: 650px;
 }
 
 
-/* CSS from the Leaflet-Choropleth documentation */
+/* STYLING FOR THE LEGEND */
 
 .legend {
     padding: 6px 8px;
@@ -47,8 +41,4 @@ html {
 
 .legend .max {
     float: right;
-}
-
-h1 {
-    text-align: center;
 }
