--- a/Lollypop chart/assets/css/style.css
+++ b/Lollypop chart/assets/css/style.css
@@ -14,7 +14,7 @@ html {
 body {
     /* Padding bottom by footer height */
     padding-bottom: 80px;
-    background-color: #FFDFD3;
+    background-color: #FFFFFF;
 }
 
 #footer {
